# spl-release

./: .gitignore  .gitmodules  LICENSE.txt  README.md
configs/: villa_setup.bash
configs/vision/: VisionNode.json
configs/vision_test/: VisionNode.json
core/: InterpreterModule.cpp  InterpreterModule.h  MotionCore.cpp  MotionCore.h  VisionCore.cpp  VisionCore.h
core/audio/: AudioDetector.cpp  AudioDetector.h  FFT.h  (+21 more)
data/: .gitattributes  .gitignore  ip_list.txt
docs/: external_code.md
documentation/: general_setup.md
install/: caffe_requirements.txt  common.py  fix-and-reinstall.sh  install  install_caffe  install_caffe_bak  install_gpu  install_lfs  install_libs  install_naoqi  install_python  pre-install.sh  script_setup.sh  script_wireless.sh  setup_robot  ssh_configs  useful_aliases.sh
lib/detect_lib/: CMakeLists.txt  build.sh  build_tool.sh  clean.sh  setup.sh
lib/detect_lib/gpu-setup/: .config  beignet.icd  config_nao_orig  copy_kernel.sh  copy_libs.sh  download.sh  install_sys_libs.sh  kernel_compile.sh  kernel_install.sh  kernel_preinstall.sh  setup_gpu_libs_robot.sh  setup_kernel_robot.sh
lib/detect_lib/include/: detect_lib.h  read_detect_lib_config.h
lib/detect_lib/samples/: bottom_0070.yuv  bottom_0073.yuv  top_0012.yuv
lib/detect_lib/src/: detect_lib.cc  detect_lib.h  read_detect_lib_config.h  test_detect_lib.cc
lib/detect_lib/testing/: ball.svm  ball.vcb  ball_detector.svm  ball_detector.vcb  ball_mean.binaryproto  ball_solver.prototxt  ball_weights.caffemodel  bottom.tflite  bottom.yaml  bottom.yaml.bak  femto.tflite  goal.svm  goal.vcb  goal_detector.svm  goal_detector.vcb  goal_mean.binaryproto  goal_solver.prototxt  goal_weights.caffemodel  old_whistle_keypoint_config.yaml  top.tflite  top.yaml  whistle_fft_config.yaml  whistle_keypoint_config.yaml
lib/detect_lib/testing/models/: atto.tflite  ball-and-cross-128-stride1.tflite  ball-and-cross-256-stride1.tflite  bottom.yaml  bottom_tool.yaml  exp390_bot_144.tflite  exp390_bot_144.tflite:Zone.Identifier  exp391_top_576.tflite  exp391_top_576.tflite:Zone.Identifier  exp436_top_384.tflite  exp441_bot_96.tflite  exp_425_96.tflite  micro.tflite  microx_128_no_resize.pt  microx_128_no_resize.tflite  microx_128_resize_320.tflite  microx_256_no_resize.tflite  microx_256_resize_1280.tflite  microxx_256_multi_no_resize.pt  microxx_256_multi_no_resize.tflite  microxx_256_multi_no_resize_colorfix.tflite  microxx_256_multi_no_resize_ess_kerasdot.tflite  microxx_256_multi_no_resize_ess_matmul.tflite  microxx_256_multi_no_resize_ess_noclip.tflite  microxx_256_multi_no_resize_ess_noclip_matmul.tflite  microxx_256_multi_no_resize_ess_noclip_nobias.tflite  microxx_256_multi_no_resize_exact_ss.tflite  microxx_256_multi_no_resize_exact_ss_test.tflite  microxx_256_multi_no_resize_nocolorfix.tflite  microxx_256_multi_no_resize_nocolorfix_0330.tflite  microxx_256_multi_no_resize_nocolorfix_0330_ess.tflite  nano.tflite  nnn2_128.tflite  nnn2_128_k5.tflite  nnn6_top_576.tflite  nnn7_top_384.tflite  nnn7_top_576_v2.tflite  pico.tflite  test.yaml  top.yaml  (+2 more)
lib/yuview/: CMakeLists.txt  compile
scripts/: cross-config.cmake  villa
src/behavior/: package.xml  setup.cfg  setup.py
src/behavior/behavior/: basic_events.py  basic_states.py  resources.py  soccer.py  state_machine.py  stephane_soccer.py
src/behavior/launch/: basic_launch.yaml  loc_test_launch.yaml  no_motion_launch.yaml
src/common/: CMakeLists.txt  package.xml
src/common/msg/: ImageLine.msg  ImageLineList.msg  ImageObject.msg  ImageObjectClasses.msg  ImageObjectList.msg  ImagePixelClasses.msg  ImageSource.msg
src/common/srv/: GetImage.srv
src/localization/: CMakeLists.txt  package.xml
src/localization/include/localization/: CameraMatrix.h  ForwardKinematics.h  Pose3D.h  RobotDimensions.h  agent_ukf.hpp  ball_ukf.hpp  line_matching.hpp  measurement.h  types.h  ukf.hpp
src/localization/launch/: loc_rviz_launch.yaml
src/localization/src/: CameraMatrix.cpp  ForwardKinematics.cpp  agent_ukf.cpp  ball_ukf.cpp  field_lines_visualization.cpp  line_matching.cpp  localization_node.cpp  ukf.cpp
src/motion/keyframe_motions/: CMakeLists.txt  package.xml
src/motion/keyframe_motions/include/keyframe_motions/: GetupGenerator.hpp  Sensors.hpp  bodyV6.hpp
src/motion/keyframe_motions/src/: GetupGenerator.cpp  Sensors.cpp  bodyV6.cpp  keyframe_motion_node.cpp
src/motion/walk/: CMakeLists.txt  package.xml
src/motion/walk/include/walk/: ActionCommand.hpp  BodyModel.hpp  JointValues.hpp  MotionDefs.hpp  Sensors.hpp  WalkCycle.hpp  XYZ_Coord.hpp  angles.hpp  basic_math.hpp  bodyV6.hpp  maths_functions.hpp  walk.hpp
src/motion/walk/src/: ActionCommand.cpp  BodyModel.cpp  Sensors.cpp  WalkCycle.cpp  bodyV6.cpp  walk.cpp  walk_node.cpp
src/vision/: CMakeLists.txt  VisionNode.cpp  VisionStage.cpp  main.cpp  package.xml
src/vision/image_sources/: CameraCapture.cpp  ColorSegmenter.cpp  ExternalSource.cpp  ImageSource.cpp  StaticImage.cpp
src/vision/include/: CameraCapture.hpp  ColorSegmenter.hpp  ExternalSource.hpp  HoughLineDetector.hpp  ImageSource.hpp  LineDetector.hpp  ObjectDetector.hpp  StaticImage.hpp  TFLiteDetector.hpp  VisionNode.hpp  VisionStage.hpp
src/vision/include/util/: VisionInfo.hpp  boilerplate.hpp  cpp_stl.hpp  opencv.hpp  ros2_base.hpp  ros2_custom_messages.hpp  ros2_topics.hpp
src/vision/line_detectors/: LineDetector.cpp
src/vision/line_detectors/HoughLineDetector/: HoughLineDetector.cpp
src/vision/object_detectors/: ObjectDetector.cpp
src/vision/object_detectors/TFLite/: TFLiteDetector.cpp
src/visualization/rviz_image_relay/: package.xml  setup.cfg  setup.py
src/visualization/rviz_image_relay/rviz_image_relay/: main.py
src/whistle_detector/: CMakeLists.txt  package.xml
src/whistle_detector/include/whistle_detector/: whistle.h  whistle_debugger.h  whistle_detector.h
src/whistle_detector/src/: alsarecorder.cpp  fourier_transform.cpp  rectangular_smooth.cpp  sine_generator.cpp  wavfile.cpp  whistle.cpp  whistle_classifier.cpp  whistle_debugger.cpp  whistle_detector.cpp
src/whistle_detector/test/: recorder.py
(+336 files in other folders)
